put the position as fixed instead of absolute; space out the word 'center' for align-items

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,12 +1,12 @@
 header {
-  position: relative;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 100;
   display: flex; 
   justify-content: space-between; 
-  align-items:center;
+  align-items: center;
   background: black;
   margin-bottom: 5vh;
 }
@@ -48,6 +48,7 @@ header {
 }
 
 .navbar {
+  position: relative;
   padding: 1vw 1vh;
 }
 
